--- a/ecommerce07/account_information.html
+++ b/ecommerce07/account_information.html
@@ -203,148 +203,148 @@
     <div class="clear"></div>
   </div>
 </div>
-  <div class="main-container col2-left-layout">
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12">
-          <div class="main">
-            <div class="row">
-              <div class="col-main col-xs-12 col-sm-9">
-                <div class="padding-s">
-                  <div class="my-account"><div class="page-title title-buttons">
-                    <h1>Address Book</h1>
-                    <button type="button" title="Add New Address" class="button" onclick="window.location='address_book.html';"><span><span>Add New Address</span></span></button>
-                  </div>
-                  <div class="col2-set addresses-list">
-                      <div class="col-1 addresses-primary">
-                          <h2>Default Addresses</h2>
-                          <ol>
-                                      <li class="item">
-                                  <h3>Default Billing Address</h3>
-                                  <address>
-                                      Le Hoa<br/>
-
-                  erewrew<br />
-
-
-
-                  rewrew,  Alaska, 080<br/>
-                  United States<br/>
-                  T: 0903652145
-
-                                  </address>
-                                  <p><a href="address_book.html">Change Billing Address</a></p>
-                             </li>
-                          
-                                      <li class="item">
-                                  <h3>Default Shipping Address</h3>
-                                  <address>
-                                      Le Hoa<br/>
-
-                  erewrew<br />
-
-
-
-                  rewrew,  Alaska, 080<br/>
-                  United States<br/>
-                  T: 0903652145
-
-                                  </address>
-                                  <p><a href="address_book.html">Change Shipping Address</a></p>
-                              </li>
-                                  </ol>
-                      </div>
-                      <div class="col-2 addresses-additional">
-                          <h2>Additional Address Entries</h2>
-                          <ol>
-                                      <li class="item empty">
-                                  <p>You have no additional address entries in your address book.</p>
-                              </li>
-                                  </ol>
-                      </div>
-                  </div>
-                  <div class="buttons-set">
-                      <p class="back-link"><a href="account_information.html"><small>&laquo; </small>Back</a></p>
-                  </div></div>                                    </div>
-                  </div>
-                  <div class="col-left sidebar col-xs-12 col-sm-3"><div class="block block-account">
-                    <div class="block-title">
-                        <strong><span>My Account</span></strong>
-                    </div>
-                    <div class="block-content">
-                        <ul>
-                          <li><a href="dashboard.html">Account Dashboard</a></li>
-                          <li class="current"><strong>Account Information</strong></li>
-                          <li class="current"><strong>Address Book</strong></li>
-                          <li><a href="history_page.html">My Orders</a></li>
-                          <li><a href="#">Billing Agreements</a></li>
-                          <li><a href="#">Recurring Profiles</a></li>
-                          <li><a href="#">My Product Reviews</a></li>
-                          <li><a href="#">My Tags</a></li>
-                          <li><a href="#">My Wishlist</a></li>
-                          <li><a href="#">My Applications</a></li>
-                          <li><a href="#">Newsletter Subscriptions</a></li>
-                          <li class="last"><a href="#">My Downloadable Products</a></li>
-                        </ul>
-                      </div>
-                    </div>
-                    <div class="block block-cart">
-                            <div class="block-title">
-                            <strong><span>My Cart</span></strong>
-                        </div>
-                        <div class="block-content">
-                                            <p class="empty">You have no items in your shopping cart.</p>
-                            </div>
-                    </div>
-                    <div class="block block-list block-compare">
-                        <div class="block-title"><strong><span>Compare Products<small>(2)</small></span></strong></div>
-                    <div class="block-content">
-                      <ol id="compare-items">
-                        <li class="item"><a class="product-image" href="product_detail.html"><img src="images/file.png" alt="" /></a>
-                          <input type="hidden" class="compare-item-id" value="1" />
-                          <a href="product_detail.html,,/" title="Remove This Item" class="btn-remove" onclick="return confirm('Are you sure you would like to remove this item from the compare products?');">Remove This Item</a>
-                          <p class="product-name"><a href="product_detail.html">Burdock Root C-s Organic</a></p>
-                        </li>
-                        <li class="item"><a class="product-image" href="product_detail.html"><img src="images/file_5.png" alt="" /></a>
-                          <input type="hidden" class="compare-item-id" value="6" />
-                          <a href="product_detail.html,,/" title="Remove This Item" class="btn-remove" onclick="return confirm('Are you sure you would like to remove this item from the compare products?');">Remove This Item</a>
-                          <p class="product-name"><a href="product_detail.html">Sage Leaf Rubbed</a></p>
-                        </li>
-                      </ol>
-                        <div class="actions">
-                            <button type="button" title="Compare" class="button" onclick="popWin('product_detail.html,,/','compare','top:0,left:0,width=820,height=600,resizable=yes,scrollbars=yes')"><span><span>Compare</span></span></button>
-                            <a href="product_detail.html,,/" onclick="return confirm('Are you sure you would like to remove all products from your comparison?');">Clear All</a>
-                        </div>
-                        </div>
-                </div>
-                <div class="block block-reorder">
-                    <div class="block-title">
-                        <strong><span>My Orders</span></strong>
-                    </div>
-                    <form method="post" action="#" id="reorder-validate-detail">
-                     <input name="form_key" type="hidden" value="CPSWBCb329BJbxix" />
-                      <div class="block-content">
-                        <p class="block-subtitle">Last Ordered Items</p>
-                        <ol id="cart-sidebar-reorder">
-                          <li class="item"><input type="checkbox" name="order_items[]" id="reorder-item-17" value="17" title="Add to Cart" class="checkbox validate-one-required-by-name" />
-                            <p class="product-name"><a href="product_detail.html">Burdock Root C-s Organic</a></p>
-                          </li>
-                        </ol>
-                            <div id="cart-sidebar-reorder-advice-container"></div>
-                            <div class="actions"><button type="submit" title="Add to Cart" class="button btn-cart"><span><span>Add to Cart</span></span></button>
-                                                <a href="account_information.html">View All</a>
+ <div class="main-container col2-left-layout">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="main">
+          <div class="row">
+            <div class="col-main col-xs-12 col-sm-9">
+              <div class="padding-s">
+                <div class="my-account"><div class="page-title"><h1>Edit Account Information</h1></div>
+                <form action="#" method="post" id="form-validate" autocomplete="off">
+                <div class="fieldset">
+                  <input name="form_key" type="hidden" value="t2Wgk9g4JiBzi2vs" />
+                  <h2 class="legend">Account Information</h2>
+                  <ul class="form-list">
+                    <li class="fields">
+                      <div class="customer-name">
+                        <div class="field name-firstname">
+                            <label for="firstname" class="required"><em>*</em>First Name</label>
+                            <div class="input-box">
+                                <input type="text" id="firstname" name="firstname" value="Le" title="First Name" maxlength="255" class="input-text required-entry"  />
                             </div>
                         </div>
-                    </form>
+                        <div class="field name-lastname">
+                            <label for="lastname" class="required"><em>*</em>Last Name</label>
+                            <div class="input-box">
+                                <input type="text" id="lastname" name="lastname" value="Hoa" title="Last Name" maxlength="255" class="input-text required-entry"  />
+                            </div>
+                        </div>
+                    </div>
+                    </li>
+                    <li>
+                        <label for="email" class="required"><em>*</em>Email Address</label>
+                        <div class="input-box">
+                            <input type="text" name="email" id="email" value="hoa.ltt@chiroro.com.vn" title="Email Address" class="input-text required-entry validate-email" />
+                        </div>
+                    </li>
+                    <li class="control">
+                      <input type="checkbox" name="change_password" id="change_password" value="1" onclick="setPasswordForm(this.checked)" title="Change Password" class="checkbox" />
+                      <label for="change_password">Change Password</label>
+                    </li>
+                  </ul>
                 </div>
+                <div class="fieldset" style="display:none;">
+                    <h2 class="legend">Change Password</h2>
+                    <ul class="form-list">
+                        <li>
+                            <label for="current_password" class="required"><em>*</em>Current Password</label>
+                            <div class="input-box">
+                                <!-- This is a dummy hidden field to trick firefox from auto filling the password -->
+                                <input type="text" class="input-text no-display" name="dummy" id="dummy" />
+                                <input type="password" title="Current Password" class="input-text" name="current_password" id="current_password" />
+                            </div>
+                        </li>
+                        <li class="fields">
+                            <div class="field">
+                                <label for="password" class="required"><em>*</em>New Password</label>
+                                <div class="input-box">
+                                    <input type="password" title="New Password" class="input-text validate-password" name="password" id="password" />
+                                </div>
+                            </div>
+                            <div class="field">
+                                <label for="confirmation" class="required"><em>*</em>Confirm New Password</label>
+                                <div class="input-box">
+                                    <input type="password" title="Confirm New Password" class="input-text validate-cpassword" name="confirmation" id="confirmation" />
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
-                  </div>
+                <div class="buttons-set">
+                    <p class="required">* Required Fields</p>
+                    <p class="back-link"><a href="index.html"><small>&laquo; </small>Back</a></p>
+                    <button type="submit" title="Save" class="button"><span><span>Save</span></span></button>
+                </div>
+                </form>
               </div>
+            </div>
           </div>
+          <div class="col-left sidebar col-xs-12 col-sm-3"><div class="block block-account">
+            <div class="block-title"><strong><span>My Account</span></strong></div>
+            <div class="block-content">
+              <ul>
+                <li><a href="dashboard.html">Account Dashboard</a></li>
+                <li class="current"><strong>Account Information</strong></li>
+                <li><a href="address_book.html">Address Book</a></li>
+                <li><a href="history_page.html">My Orders</a></li>
+                <li><a href="#">Billing Agreements</a></li>
+                <li><a href="#">Recurring Profiles</a></li>
+                <li><a href="#">My Product Reviews</a></li>
+                <li><a href="#">My Tags</a></li>
+                <li><a href="#">My Wishlist</a></li>
+                <li><a href="#">My Applications</a></li>
+                <li><a href="#">Newsletter Subscriptions</a></li>
+                <li class="last"><a href="#">My Downloadable Products</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="block block-cart">
+            <div class="block-title"><strong><span>My Cart</span></strong></div>
+            <div class="block-content">
+              <div class="summary">
+                <p class="amount">There are <a href="shopping_cart.html">2 items</a> in your cart.</p>
+                <p class="subtotal"><span class="label">Cart Subtotal:</span> <span class="price">$49.98</span></p>
+              </div>
+              <div class="actions"><button type="button" title="Checkout" class="button" onclick="setLocation('checkout.html')"><span><span>Checkout</span></span></button></div>
+              <p class="block-subtitle">Recently added item(s)</p>
+              <ol id="cart-sidebar" class="mini-products-list">
+                <li class="item">
+                 <div class="product-control-buttons">
+                  <a href="product_detail.html" title="Remove This Item" onclick="return confirm('Are you sure you would like to remove this item from the shopping cart?');" class="btn-remove">Remove This Item</a>
+                  <a href="product_detail.html" title="Edit item" class="btn-edit">Edit item</a>
+                </div>
+                <a href="product_detail.html" title="Burdock Root C-s Organic" class="product-image"><img src="images/file.png" alt="Burdock Root C-s Organic" /></a>
+                <p class="product-name"><a href="product_detail.html">Burdock Root C-s Organic</a></p>
+                <div class="product-details"><strong>2</strong> x   
+                                <span class="price">$24.99</span>                    
+                  <div class="truncated"><span class="details">Details</span>
+                    <div class="truncated_full_value">
+                      <dl class="item-options"><dt>Packaging Container</dt><dd>Cloth bag</dd><dt>Weight</dt><dd>15 Pounds</dd></dl>
+                    </div>
+                  </div>
+                </div>
+              </li>
+            </ol>
+          </div>
+        </div>
+        <div class="block block-list block-compare">
+            <div class="block-title">
+                <strong><span>Compare Products</span></strong>
+            </div>
+            <div class="block-content">
+                    <p class="empty">You have no items to compare.</p>
+                </div>
+        </div>
       </div>
-  </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-<div class="footer-container">
+  <div class="footer-container">
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
