--- a/ecommerce07/dashboard.html
+++ b/ecommerce07/dashboard.html
@@ -210,94 +210,89 @@
         <div class="main">
           <div class="row">
             <div class="col-main col-xs-12 col-sm-9">
-                                    <div class="padding-s">
-                                                                                <div class="my-account"><div class="dashboard">
-    <div class="page-title">
-        <h1>My Dashboard</h1>
-    </div>
-        <div class="welcome-msg">
-    <p class="hello"><strong>Hello, Le Hoa!</strong></p>
-    <p>From your My Account Dashboard you have the ability to view a snapshot of your recent account activity and update your account information. Select a link below to view or edit information.</p>
-</div>
-        <div class="box-account box-info">
-        <div class="box-head">
-            <h2>Account Information</h2>
-        </div>
+              <div class="padding-s">
+                <div class="my-account"><div class="dashboard">
+                  <div class="page-title"><h1>My Dashboard</h1></div>
+                  <div class="welcome-msg">
+                    <p class="hello"><strong>Hello, Le Hoa!</strong></p>
+                    <p>From your My Account Dashboard you have the ability to view a snapshot of your recent account activity and update your account information. Select a link below to view or edit information.</p>
+                  </div>
+                  <div class="box-account box-info">
+                    <div class="box-head"><h2>Account Information</h2></div>
                         <div class="col2-set">
-    <div class="col-1">
-        <div class="box">
-            <div class="box-title">
-                <h3>Contact Information</h3>
-                <a href="https://livedemo00.template-help.com/magento_50701/customer/account/edit/">Edit</a>
-            </div>
-            <div class="box-content">
-                <p>
-                    Le Hoa<br />
-                    hoa.ltt@chiroro.com.vn<br />
-                    <a href="https://livedemo00.template-help.com/magento_50701/customer/account/edit/changepass/1/">Change Password</a>
-                </p>
-            </div>
-        </div>
-    </div>
-        <div class="col-2">
-        <div class="box">
-            <div class="box-title">
-                <h3>Newsletters</h3>
-                <a href="https://livedemo00.template-help.com/magento_50701/newsletter/manage/">Edit</a>
-            </div>
-            <div class="box-content">
-                <p>
-                                            You are currently not subscribed to any newsletter.                                    </p>
-            </div>
-        </div>
+                          <div class="col-1">
+                              <div class="box">
+                                  <div class="box-title">
+                                      <h3>Contact Information</h3>
+                                      <a href="address_book.html/">Edit</a>
+                                  </div>
+                                  <div class="box-content">
+                                      <p>
+                                          Le Hoa<br />
+                                          hoa.ltt@chiroro.com.vn<br />
+                                          <a href="account_information.html">Change Password</a>
+                                      </p>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="col-2">
+                          <div class="box">
+                              <div class="box-title">
+                                  <h3>Newsletters</h3>
+                                  <a href="newsletter_page.html">Edit</a>
+                              </div>
+                              <div class="box-content">
+                                  <p>You are currently not subscribed to any newsletter.</p>
+                              </div>
+                          </div>
                     </div>
-    </div>
-        <div class="col2-set">
-    <div class="box">
-        <div class="box-title">
-            <h3>Address Book</h3>
-            <a href="https://livedemo00.template-help.com/magento_50701/customer/address/">Manage Addresses</a>
-        </div>
-        <div class="box-content">
-            <div class="col-1">
-                <h4>Default Billing Address</h4>
-                <address>
-                    You have not set a default billing address.<br />
-                    <a href="https://livedemo00.template-help.com/magento_50701/customer/address/edit/">Edit Address</a>
-                </address>
-            </div>
-            <div class="col-2">
-                <h4>Default Shipping Address</h4>
-                <address>
-                    You have not set a default shipping address.<br />
-                    <a href="https://livedemo00.template-help.com/magento_50701/customer/address/edit/">Edit Address</a>
-                </address>
-            </div>
-        </div>
-    </div>
-</div>
-    </div>
+                    </div>
+                    <div class="col2-set">
+                      <div class="box">
+                          <div class="box-title">
+                              <h3>Address Book</h3>
+                              <a href="account_page.html">Manage Addresses</a>
+                          </div>
+                          <div class="box-content">
+                              <div class="col-1">
+                                  <h4>Default Billing Address</h4>
+                                  <address>
+                                      You have not set a default billing address.<br />
+                                      <a href="address_book.html">Edit Address</a>
+                                  </address>
+                              </div>
+                              <div class="col-2">
+                                  <h4>Default Shipping Address</h4>
+                                  <address>
+                                      You have not set a default shipping address.<br />
+                                      <a href="address_book.html">Edit Address</a>
+                                  </address>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                </div>
         </div></div>                                    </div>
-                                </div>
-                                <div class="col-left sidebar col-xs-12 col-sm-3"><div class="block block-account">
+    </div>
+    <div class="col-left sidebar col-xs-12 col-sm-3"><div class="block block-account">
     <div class="block-title">
         <strong><span>My Account</span></strong>
     </div>
     <div class="block-content">
         <ul>
-                                                                                                    <li class="current"><strong>Account Dashboard</strong></li>
-                                                                                <li><a href="https://livedemo00.template-help.com/magento_50701/customer/account/edit/">Account Information</a></li>
-                                                                                <li><a href="https://livedemo00.template-help.com/magento_50701/customer/address/">Address Book</a></li>
-                                                                                <li><a href="https://livedemo00.template-help.com/magento_50701/sales/order/history/">My Orders</a></li>
-                                                                                <li><a href="https://livedemo00.template-help.com/magento_50701/sales/billing_agreement/">Billing Agreements</a></li>
-                                                                                <li><a href="https://livedemo00.template-help.com/magento_50701/sales/recurring_profile/">Recurring Profiles</a></li>
-                                                                                <li><a href="https://livedemo00.template-help.com/magento_50701/review/customer/">My Product Reviews</a></li>
-                                                                                <li><a href="https://livedemo00.template-help.com/magento_50701/tag/customer/">My Tags</a></li>
-                                                                                <li><a href="https://livedemo00.template-help.com/magento_50701/wishlist/">My Wishlist</a></li>
-                                                                                <li><a href="https://livedemo00.template-help.com/magento_50701/oauth/customer_token/">My Applications</a></li>
-                                                                                <li><a href="https://livedemo00.template-help.com/magento_50701/newsletter/manage/">Newsletter Subscriptions</a></li>
-                                                                                <li class="last"><a href="https://livedemo00.template-help.com/magento_50701/downloadable/customer/products/">My Downloadable Products</a></li>
-                                    </ul>
+          <li class="current"><strong>Account Dashboard</strong></li>
+          <li><a href="account_information.html">Account Information</a></li>
+          <li><a href="address_book.html">Address Book</a></li>
+          <li><a href="history_page.html">My Orders</a></li>
+          <li><a href="#">Billing Agreements</a></li>
+          <li><a href="#">Recurring Profiles</a></li>
+          <li><a href="#">My Product Reviews</a></li>
+          <li><a href="#">My Tags</a></li>
+          <li><a href="#">My Wishlist</a></li>
+          <li><a href="#">My Applications</a></li>
+          <li><a href="#">Newsletter Subscriptions</a></li>
+          <li class="last"><a href="#">My Downloadable Products</a></li>
+        </ul>
     </div>
 </div>
 <div class="block block-cart">
@@ -306,22 +301,22 @@
     </div>
     <div class="block-content">
             <div class="summary">
-                            <p class="amount">There are <a href="https://livedemo00.template-help.com/magento_50701/checkout/cart/">2 items</a> in your cart.</p>
+                            <p class="amount">There are <a href="shopping_cart.html">2 items</a> in your cart.</p>
                         <p class="subtotal">
                                     <span class="label">Cart Subtotal:</span> <span class="price">$49.98</span>                                                </p>
         </div>
             <div class="actions">
-                <button type="button" title="Checkout" class="button" onclick="setLocation('https://livedemo00.template-help.com/magento_50701/checkout/onepage/')"><span><span>Checkout</span></span></button>
+                <button type="button" title="Checkout" class="button" onclick="setLocation('checkout.html')"><span><span>Checkout</span></span></button>
     </div>
                     <p class="block-subtitle">Recently added item(s)</p>
         <ol id="cart-sidebar" class="mini-products-list">
                     <li class="item">
     <div class="product-control-buttons">
-        <a href="https://livedemo00.template-help.com/magento_50701/checkout/cart/delete/id/402/uenc/aHR0cDovL2xpdmVkZW1vMDAudGVtcGxhdGUtaGVscC5jb20vbWFnZW50b181MDcwMS9jdXN0b21lci9hY2NvdW50L2luZGV4Lw,,/" title="Remove This Item" onclick="return confirm('Are you sure you would like to remove this item from the shopping cart?');" class="btn-remove">Remove This Item</a>
-                        <a href="https://livedemo00.template-help.com/magento_50701/checkout/cart/configure/id/402/" title="Edit item" class="btn-edit">Edit item</a>
+        <a href="product_detail.html,,/" title="Remove This Item" onclick="return confirm('Are you sure you would like to remove this item from the shopping cart?');" class="btn-remove">Remove This Item</a>
+                        <a href="product_detail.html" title="Edit item" class="btn-edit">Edit item</a>
                 </div>
-            <a href="https://livedemo00.template-help.com/magento_50701/burdock-root-c-s-certified-organic.html" title="Burdock Root C-s Organic" class="product-image"><img src="https://livedemo00.template-help.com/magento_50701/media/catalog/product/cache/1/thumbnail/90x90/9df78eab33525d08d6e5fb8d27136e95/f/i/file.png" alt="Burdock Root C-s Organic" /></a>
-        <p class="product-name"><a href="https://livedemo00.template-help.com/magento_50701/burdock-root-c-s-certified-organic.html">Burdock Root C-s Organic</a></p>
+            <a href="product_detail.html" title="Burdock Root C-s Organic" class="product-image"><img src="images/file.png" alt="Burdock Root C-s Organic" /></a>
+        <p class="product-name"><a href="product_detail.html">Burdock Root C-s Organic</a></p>
     <div class="product-details">
         <strong>2</strong> x
 
