--- a/ecommerce07/login_page.html
+++ b/ecommerce07/login_page.html
@@ -262,7 +262,7 @@
                             <h2>New Customers</h2>
                             <p>By creating an account with our store, you will be able to move through the checkout process faster, store multiple shipping addresses, view and track your orders in your account and more.</p>    
                             <div class="buttons-set">
-                                <button type="button" title="Create an Account" class="button" onclick="window.location='https://livedemo00.template-help.com/magento_50701/customer/account/create/';"><span><span>Create an Account</span></span></button>
+                                <button type="button" title="Create an Account" class="button" onclick="window.location='register_page.html';"><span><span>Create an Account</span></span></button>
                             </div>
                         </div>
                     </div>
