--- a/duhoc/tientong/site-map.html
+++ b/duhoc/tientong/site-map.html
@@ -10,7 +10,7 @@
 <title>Du hoc</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"><link rel='dns-prefetch' href='//fonts.googleapis.com' />
 <script type="text/javascript">
-    window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/2\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/2\/svg\/","svgExt":".svg","source":{"concatemoji":"http:\/\/uoce.chimpgroup.com\/wp-includes\/js\/wp-emoji-release.min.js?ver=4.6.9"}};
+    window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/2\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/2\/svg\/","svgExt":".svg","source":{"concatemoji":"js\/wp-emoji-release.min.js?ver=4.6.9"}};
     !function(a,b,c){function d(a){var c,d,e,f,g,h=b.createElement("canvas"),i=h.getContext&&h.getContext("2d"),j=String.fromCharCode;if(!i||!i.fillText)return!1;switch(i.textBaseline="top",i.font="600 32px Arial",a){case"flag":return i.fillText(j(55356,56806,55356,56826),0,0),!(h.toDataURL().length<3e3)&&(i.clearRect(0,0,h.width,h.height),i.fillText(j(55356,57331,65039,8205,55356,57096),0,0),c=h.toDataURL(),i.clearRect(0,0,h.width,h.height),i.fillText(j(55356,57331,55356,57096),0,0),d=h.toDataURL(),c!==d);case"diversity":return i.fillText(j(55356,57221),0,0),e=i.getImageData(16,16,1,1).data,f=e[0]+","+e[1]+","+e[2]+","+e[3],i.fillText(j(55356,57221,55356,57343),0,0),e=i.getImageData(16,16,1,1).data,g=e[0]+","+e[1]+","+e[2]+","+e[3],f!==g;case"simple":return i.fillText(j(55357,56835),0,0),0!==i.getImageData(16,16,1,1).data[0];case"unicode8":return i.fillText(j(55356,57135),0,0),0!==i.getImageData(16,16,1,1).data[0];case"unicode9":return i.fillText(j(55358,56631),0,0),0!==i.getImageData(16,16,1,1).data[0]}return!1}function e(a){var c=b.createElement("script");c.src=a,c.type="text/javascript",b.getElementsByTagName("head")[0].appendChild(c)}var f,g,h,i;for(i=Array("simple","flag","unicode8","diversity","unicode9"),c.supports={everything:!0,everythingExceptFlag:!0},h=0;h<i.length;h++)c.supports[i[h]]=d(i[h]),c.supports.everything=c.supports.everything&&c.supports[i[h]],"flag"!==i[h]&&(c.supports.everythingExceptFlag=c.supports.everythingExceptFlag&&c.supports[i[h]]);c.supports.everythingExceptFlag=c.supports.everythingExceptFlag&&!c.supports.flag,c.DOMReady=!1,c.readyCallback=function(){c.DOMReady=!0},c.supports.everything||(g=function(){c.readyCallback()},b.addEventListener?(b.addEventListener("DOMContentLoaded",g,!1),a.addEventListener("load",g,!1)):(a.attachEvent("onload",g),b.attachEvent("onreadystatechange",function(){"complete"===b.readyState&&c.readyCallback()})),f=c.source||{},f.concatemoji?e(f.concatemoji):f.wpemoji&&f.twemoji&&(e(f.twemoji),e(f.wpemoji)))}(window,document,window._wpemojiSettings);
 </script>
 <style type="text/css">
@@ -203,19 +203,19 @@ var userSettings = {"url":"\/","uid":"0","time":"1513223753","secure":""};
                                             <h3>Pages</h3>
                                             <ul><li><a href="index.html">Home</a></li>
                                                 <li><a href="blog-large.html">Blog Large</a></li>
-                                                <li><a href="http://uoce.chimpgroup.com/blog-medium/">Blog Medium</a></li>
-                                                <li><a href="http://uoce.chimpgroup.com/blog-masonry/">Blog Masonry</a></li>
-                                                <li><a href="http://uoce.chimpgroup.com/course-modern/">Course Modern</a></li>
-                                                <li><a href="http://uoce.chimpgroup.com/course-classic/">Course Classic</a></li>
-                                                <li><a href="http://uoce.chimpgroup.com/course-list/">Course List</a></li>
-                                                <li><a href="http://uoce.chimpgroup.com/event-list/">Event List</a></li>
-                                                <li><a href="http://uoce.chimpgroup.com/event-grid/">Event Grid</a></li>
-                                                <li><a href="http://uoce.chimpgroup.com/event-calendar/">Event Calendar</a></li>
-                                                <li><a href="http://uoce.chimpgroup.com/medium-gallery/">Medium Gallery</a></li>
-                                                <li><a href="http://uoce.chimpgroup.com/small-gallery/">Small Gallery</a></li>
+                                                <li><a href="education.html">Blog Medium</a></li>
+                                                <li><a href="blog-masonry.html">Blog Masonry</a></li>
+                                                <li><a href="course-modern.html">Course Modern</a></li>
+                                                <li><a href="course-classic.html">Course Classic</a></li>
+                                                <li><a href="course-list.html">Course List</a></li>
+                                                <li><a href="event-list.html">Event List</a></li>
+                                                <li><a href="event-grid.html">Event Grid</a></li>
+                                                <li><a href="event-calendar.html">Event Calendar</a></li>
+                                                <li><a href="medium-gallery.html">Medium Gallery</a></li>
+                                                <li><a href="small-gallery.html">Small Gallery</a></li>
                                                 <li><a href="http://uoce.chimpgroup.com/price-packages/">Price &amp; Packages</a></li>
-                                                <li><a href="http://uoce.chimpgroup.com/about-us/">About us</a></li>
-                                                <li><a href="http://uoce.chimpgroup.com/faq/">Faq</a></li>
+                                                <li><a href="about-us.html">About us</a></li>
+                                                <li><a href="faq.html">Faq</a></li>
                                                 <li><a href="contact-us.html">Contact us</a></li>
                                                 <li><a href="site-map.html">Site Map</a></li>
                                                 <li><a href="under-construction.html">pf-under-construction</a></li>
